# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\OrderController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\WilayaController;
@@ -10,3 +11,9 @@ Route::get('/products/{slug}', [ProductController::class, 'show']);
 Route::get('/wilayas', [WilayaController::class, 'index']);
 Route::post('/orders', [OrderController::class, 'store'])->middleware('throttle:5,1');
 Route::get('/orders/track', [OrderController::class, 'track'])->middleware('throttle:5,1,order-track');
+
+Route::get('/categories', [CategoryController::class, 'index']);
+Route::post('/categories', [CategoryController::class, 'store']);
+Route::get('/categories/{id}', [CategoryController::class, 'show']);
+Route::patch('/categories/{id}', [CategoryController::class, 'update']);
+Route::delete('/categories/{id}', [CategoryController::class, 'destroy']);
